Add authentication, history, file upload

--- a/public/history/history.html
+++ b/public/history/history.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./public/stylesheets/bootstrap.css">
+   <link rel="stylesheet" href="../stylesheets/bootstrap_mod.css">
     <title>Dropbox History Folder</title>
 </head>
 <body class="w-100 h-100" style="position: fixed;">
@@ -13,10 +13,11 @@
     <script>
       var options = {
          // Shared link to Dropbox file
-         link: "https://www.dropbox.com/scl/fo/lwdhkucgys1eau8c7n8bi/h?rlkey=1g3qiehijklkld276t2be1p97&dl=0",
+         link: "https://www.dropbox.com/sh/0el0vg1cdjbcz3r/AAAOMKOiyQXxD2tWdLw8rvWta?dl=1",
          file: {
             // Sets the zoom mode for embedded files. Defaults to 'best'.
             zoom: "best" // or "fit"
+            
          },
          folder: {
             // Sets the view mode for embedded folders. Defaults to 'list'.
