--- a/database/history/history.html
+++ b/database/history/history.html
@@ -16,6 +16,17 @@
             </select>
             <input type="search" class="form-control rounded-start-0" name="search" id="search" style="height: 43px; width: 35%" placeholder="Search offer..." oninput="searchOffer()" />
         </div>
+        <div class="h-100 align-items-center justify-content-center" id="notFound" style="display: none">
+            <div class="fs-4" style="margin-top: -20%">No offers found!</div>
+        </div>
+        <div class="h-100 align-items-center justify-content-center" id="loadingSpinner" style="display: flex">
+            <div style="margin-top: -20%" class="d-flex align-items-center gap-3">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+                <div class="fs-4">Loading...</div>
+            </div>
+        </div>
         <div class="offer-history-container accordion p-2" id="offer-history"></div>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
