--- a/database/history/history.html
+++ b/database/history/history.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../../public/stylesheets/bootstrap.css" />
         <link rel="stylesheet" href="./style.css" />
-        <title>Dropbox History Folder</title>
+        <title>History</title>
     </head>
     <body class="w-100 h-100 m-0" style="position: fixed">
         <div class="d-flex justify-content-center align-items-center py-2">
