🎈 perf(SMTP Check): Improving smtp check

--- a/database/data/data.html
+++ b/database/data/data.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="overflow: auto">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Data</title>
   </head>
-  <body class="w-100 h-100 m-0 bg-transparent" style="position: fixed">
+  <body class="w-100 h-100 m-0 bg-transparent" style="position: fixed; overflow: auto">
     <!-- Insert Data -->
     <div id="insertData" class="card">
       <h5 class="card-header fw-semibold">Insert Data</h5>
