--- a/database/history/history.html
+++ b/database/history/history.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./style.css" />
         <title>History</title>
     </head>
-    <body class="w-100 h-100 m-0" style="position: fixed">
+    <body class="w-100 h-100 m-0" style="position: fixed; background-color: transparent">
         <div class="d-flex justify-content-center align-items-center py-2">
             <select name="offerAttr" id="offerAttr" class="form-select rounded-end-0 border-end-0" style="height: 43px; width: 10%" onchange="changeSearchType()">
                 <option value="offerID">ID</option>
