--- a/database/tracking/index.html
+++ b/database/tracking/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../../public/stylesheets/bootstrap.css" />
         <title>Tracking</title>
     </head>
-    <body class="w-100 h-100 m-0" style="position: fixed; overflow: auto">
+    <body class="w-100 h-100 m-0" style="position: fixed; overflow: auto; background-color: transparent">
         <div class="d-flex justify-content-center align-items-center py-2 position-relative">
             <select name="trackingAttr" id="trackingAttr" class="form-select rounded-end-0 border-end-0" style="height: 43px; width: 10%" onchange="changeSearchType()">
                 <option value="offer" selected>Name</option>
@@ -50,7 +50,7 @@
         <div class="h-100 align-items-center justify-content-center" id="error" style="display: none">
             <div class="message fs-4 text-danger" style="margin-top: -20%"></div>
         </div>
-        <div class="h-100 align-items-center justify-content-center" id="loadingSpinner" style="display: flex">
+        <div class="h-100 align-items-center justify-content-center" id="loadingSpinner" style="display: none">
             <div style="margin-top: -20%" class="d-flex align-items-center gap-3">
                 <div class="spinner-border" role="status">
                     <span class="visually-hidden">Loading...</span>
@@ -62,10 +62,50 @@
             <table id="trackingTable" class="table table-striped table-bordered">
                 <thead>
                     <tr>
-                        <th scope="col">Offer Name</th>
-                        <th scope="col">Country</th>
-                        <th scope="col">Opens</th>
-                        <th scope="col">Date</th>
+                        <th scope="col">
+                            <div class="position-relative">Offer Name</div>
+                        </th>
+                        <th scope="col">
+                            <div class="position-relative">Country</div>
+                        </th>
+                        <th scope="col">
+                            <div class="position-relative">
+                                Opens
+                                <span class="sorting-container position-absolute end-0 top-0 d-flex align-items-center" role="button" data-sort-col="openers" onclick="sortTracking(this)">
+                                    <!-- No Sort -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="var(--bs-secondary)" data-sort="default">
+                                        <path d="M320-440v-287L217-624l-57-56 200-200 200 200-57 56-103-103v287h-80ZM600-80 400-280l57-56 103 103v-287h80v287l103-103 57 56L600-80Z" />
+                                    </svg>
+                                    <!-- Sort Ascending -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="var(--bs-primary)" class="d-none" data-sort="asc">
+                                        <path d="M440-80v-647L256-544l-56-56 280-280 280 280-56 57-184-184v647h-80Z" />
+                                    </svg>
+                                    <!-- Sort Descending -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="var(--bs-primary)" class="d-none" data-sort="desc">
+                                        <path d="M480-80 200-360l56-56 184 183v-647h80v647l184-184 56 57L480-80Z" />
+                                    </svg>
+                                </span>
+                            </div>
+                        </th>
+                        <th scope="col">
+                            <div class="position-relative">
+                                Date
+                                <span class="sorting-container position-absolute end-0 top-0 d-flex align-items-center" role="button" data-sort-col="date" onclick="sortTracking(this)">
+                                    <!-- No Sort -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="var(--bs-secondary)" data-sort="default">
+                                        <path d="M320-440v-287L217-624l-57-56 200-200 200 200-57 56-103-103v287h-80ZM600-80 400-280l57-56 103 103v-287h80v287l103-103 57 56L600-80Z" />
+                                    </svg>
+                                    <!-- Sort Ascending -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="var(--bs-primary)" class="d-none" data-sort="asc">
+                                        <path d="M440-80v-647L256-544l-56-56 280-280 280 280-56 57-184-184v647h-80Z" />
+                                    </svg>
+                                    <!-- Sort Descending -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="var(--bs-primary)" class="d-none" data-sort="desc">
+                                        <path d="M480-80 200-360l56-56 184 183v-647h80v647l184-184 56 57L480-80Z" />
+                                    </svg>
+                                </span>
+                            </div>
+                        </th>
                         <th style="width: 8%">
                             <input type="checkbox" id="select-all" class="form-check-input" oninput="selectElements(event)" />
                         </th>
