--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="./public/stylesheets/bootstrap.css" />
    <link rel="stylesheet" href="./public/stylesheets/styles.css" />
    <script src="./public/js/auth.js"></script>
-   <script src="./public/js/getUsers.js"></script>
+   <!-- <script src="./public/js/getUsers.js"></script> -->
    <title>Authentication</title>
 </head>
 <body class="h-100">
