--- a/public/combo_check/index.html
+++ b/public/combo_check/index.html
@@ -32,7 +32,13 @@
                 </div>
                 <!-- Label -->
                 <div class="d-flex justify-content-center mb-2">
-                    <div class="w-50 fw-semibold">Combo List</div>
+                    <div class="w-50 fw-semibold d-flex justify-content-between">
+                        <span>Combo List</span>
+                        <div class="form-check form-switch d-flex gap-2 align-items-center" bis_skin_checked="1">
+                            <input class="form-check-input" type="checkbox" role="switch" id="office365" checked="" />
+                            <label class="form-check-label" for="office365">Office365</label>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Manual Input -->
@@ -198,7 +204,33 @@
                 <div id="smtps" class="row fw-semibold form-control mb-2 mx-0" style="height: 200px; font-size: 0.92rem; overflow: auto">
                     <!-- Token Example -->
                     <div id="tokenExample" class="token">
-                        <div data-value="status"></div>
+                        <div class="idle" data-value="status">
+                            <!-- Label -->
+                            <div></div>
+                            <!-- Loader -->
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="24" viewBox="0 0 24 24">
+                                <style>
+                                    .spinner_ZCsl {
+                                        animation: spinner_qV4G 1.2s cubic-bezier(0.52, 0.6, 0.25, 0.99) infinite;
+                                    }
+                                    .spinner_gaIW {
+                                        animation-delay: 0.6s;
+                                    }
+                                    @keyframes spinner_qV4G {
+                                        0% {
+                                            r: 0;
+                                            opacity: 1;
+                                        }
+                                        100% {
+                                            r: 11px;
+                                            opacity: 0;
+                                        }
+                                    }
+                                </style>
+                                <circle class="spinner_ZCsl" cx="12" cy="12" r="0" />
+                                <circle class="spinner_ZCsl spinner_gaIW" cx="12" cy="12" r="0" />
+                            </svg>
+                        </div>
                         <div data-value="domain">domain.com</div>
                         <div data-value="smtp">smtp:port:encryption:</div>
                         <div role="button" onclick="this.parentNode.remove()">
@@ -210,7 +242,21 @@
                     </div>
                 </div>
                 <!-- Save Button -->
-                <div class="d-flex justify-content-end">
+                <div class="d-flex justify-content-between">
+                    <div class="flex-fill d-inline-flex gap-4 align-items-center fw-semibold">
+                        <div class="d-inline-flex gap-1 align-items-center">
+                            <div class="rounded-circle" style="height: 18px; width: 18px; background-color: #28a745"></div>
+                            <span style="color: #28a745">Saved</span>
+                        </div>
+                        <div class="d-inline-flex gap-1 align-items-center">
+                            <div class="rounded-circle" style="height: 18px; width: 18px; background-color: #ffc107"></div>
+                            <span style="color: #ffc107">Already exists in database</span>
+                        </div>
+                        <div class="d-inline-flex gap-1 align-items-center">
+                            <div class="rounded-circle" style="height: 18px; width: 18px; background-color: #dc3545"></div>
+                            <span style="color: #dc3545">Error</span>
+                        </div>
+                    </div>
                     <button id="saveSmtp" type="submit" class="btn btn-success fw-semibold" style="height: 43px; width: 100px">
                         <span>Save</span>
                         <!-- Loader -->
@@ -334,19 +380,35 @@
                         <!-- Valid SMTPs Label & Download Button -->
                         <div class="d-flex justify-content-between align-items-center mb-2">
                             <div class="fw-semibold">Valid smtps</div>
-                            <!-- Download Button -->
-                            <button class="btn btn-primary p-0 px-2" style="height: 38px" title="Download valid smtps" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Download emails" onclick="downloadValidSMTPs()">
-                                <!-- Download Icon -->
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 -960 960 960" fill="currentColor">
-                                    <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
-                                </svg>
-                                <!-- Download Loader -->
-                                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 100 100" class="d-none">
-                                    <circle cx="50" cy="50" r="32" stroke-width="8" stroke="currentColor" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round">
-                                        <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1s" keyTimes="0;1" values="0 50 50;360 50 50" />
-                                    </circle>
-                                </svg>
-                            </button>
+                            <!-- Load & Download Buttons -->
+                            <div class="d-flex gap-2">
+                                <!-- Load Button -->
+                                <button class="btn btn-success p-0 px-2" style="height: 38px" title="Load valid smtps" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Load emails" onclick="LoadSMTPsToParent()">
+                                    <!-- Load Icon -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="currentColor">
+                                        <path d="M440-320v-326L336-542l-56-58 200-200 200 200-56 58-104-104v326h-80ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+                                    </svg>
+                                    <!-- Load Loader -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 100 100" class="d-none">
+                                        <circle cx="50" cy="50" r="32" stroke-width="8" stroke="currentColor" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round">
+                                            <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1s" keyTimes="0;1" values="0 50 50;360 50 50" />
+                                        </circle>
+                                    </svg>
+                                </button>
+                                <!-- Download Button -->
+                                <button class="btn btn-primary p-0 px-2" style="height: 38px" title="Download valid smtps" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Download emails" onclick="downloadValidSMTPs()">
+                                    <!-- Download Icon -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" viewBox="0 -960 960 960" fill="currentColor">
+                                        <path d="M480-320 280-520l56-58 104 104v-326h80v326l104-104 56 58-200 200ZM240-160q-33 0-56.5-23.5T160-240v-120h80v120h480v-120h80v120q0 33-23.5 56.5T720-160H240Z" />
+                                    </svg>
+                                    <!-- Download Loader -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 100 100" class="d-none">
+                                        <circle cx="50" cy="50" r="32" stroke-width="8" stroke="currentColor" stroke-dasharray="50.26548245743669 50.26548245743669" fill="none" stroke-linecap="round">
+                                            <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1s" keyTimes="0;1" values="0 50 50;360 50 50" />
+                                        </circle>
+                                    </svg>
+                                </button>
+                            </div>
                         </div>
                         <!-- Valid SMTPs field -->
                         <div id="validSMTPs" class="form-control" style="height: inherit; overflow: auto"></div>
