--- a/public/combo_check/index.html
+++ b/public/combo_check/index.html
@@ -35,7 +35,7 @@
                     <div class="w-50 fw-semibold d-flex justify-content-between">
                         <span>Combo List</span>
                         <div class="form-check form-switch d-flex gap-2 align-items-center" bis_skin_checked="1">
-                            <input class="form-check-input" type="checkbox" role="switch" id="office365" checked="" />
+                            <input class="form-check-input" type="checkbox" role="switch" id="office365" />
                             <label class="form-check-label" for="office365">Office365</label>
                         </div>
                     </div>
@@ -288,8 +288,8 @@
                         <path d="M382-240 154-468l57-57 171 171 367-367 57 57-424 424Z" />
                     </svg>
                     <!-- Stop -->
-                    <svg xmlns="http://www.w3.org/2000/svg" id="statusStopped" width="28" height="28" fill="#bb2d3b" class="bi bi-stop-fill" viewBox="0 0 16 16">
-                        <path d="M5 3.5h6A1.5 1.5 0 0 1 12.5 5v6a1.5 1.5 0 0 1-1.5 1.5H5A1.5 1.5 0 0 1 3.5 11V5A1.5 1.5 0 0 1 5 3.5z"></path>
+                    <svg xmlns="http://www.w3.org/2000/svg" height="28" viewBox="0 -960 960 960" id="statusStopped" width="28" fill="#bb2d3b" class="">
+                        <path d="M240-240v-480h480v480H240Z"></path>
                     </svg>
                     <!-- Status Text -->
                     <span id="statusLabel">Checking...</span>
@@ -357,7 +357,7 @@
                             <div id="matchedCombo" class="d-flex align-items-center gap-2">
                                 <div class="" style="width: 24px">
                                     <!-- Loader SVG -->
-                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 100 100" class="invisible">
+                                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 100 100" class="d-none">
                                         <circle cx="50" cy="50" fill="none" stroke="black" stroke-width="10" r="35" stroke-dasharray="164.93361431346415 56.97787143782138">
                                             <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1s" values="0 50 50;360 50 50" keyTimes="0;1" />
                                         </circle>
@@ -369,6 +369,10 @@
                                     <!-- Cross Icon (Failed) -->
                                     <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="#DC3545" class="d-none">
                                         <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
+                                    </svg>
+                                    <!-- Stopped Icon -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24" fill="#bb2d3b" class="d-none">
+                                        <path d="M240-240v-480h480v480H240Z" />
                                     </svg>
                                 </div>
                                 <div>1st smtp</div>
@@ -415,13 +419,21 @@
                     </div>
                 </div>
             </div>
+            <!-- Check & Stop Buttons -->
             <div class="d-flex justify-content-end">
-                <button id="check" class="btn btn-primary fw-semibold" style="height: 43px; width: 100px" onclick="checkSMTP()">
-                    <span id="checkLabel">Check</span>
-                    <div id="checkSpinner" class="spinner-border d-none" role="status">
-                        <span class="visually-hidden">Loading...</span>
-                    </div>
-                </button>
+                <div class="d-flex justify-content-between gap-2">
+                    <!-- Check button -->
+                    <button id="check" class="btn btn-primary fw-semibold" style="height: 43px; width: 100px" onclick="checkSMTP()">
+                        <span id="checkLabel">Check</span>
+                        <div id="checkSpinner" class="spinner-border d-none" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </button>
+                    <!-- Stop button -->
+                    <button id="stop" class="btn btn-warning fw-semibold" style="height: 43px; width: 100px" onclick="stopCheck()">
+                        <span id="stopLabel">Stop</span>
+                    </button>
+                </div>
             </div>
         </div>
 
